storage/innobase/row/row0upd.cc
@@ -549,7 +549,7 @@ row_upd_index_entry_sys_field(
 	field = static_cast<byte*>(dfield_get_data(dfield));
 
 	if (type == DATA_TRX_ID) {
-		ut_ad(val > 0);
+		ut_ad(val > 0 || index->table->is_temporary());
 		trx_write_trx_id(field, val);
 	} else {
 		ut_ad(type == DATA_ROLL_PTR);
